[gd_scene load_steps=8 format=3 uid="uid://cjs544vn8kvp5"]

[ext_resource type="Script" path="res://objects/advert.gd" id="1_0vhs6"]
[ext_resource type="Texture2D" uid="uid://3jww52b0vin6" path="res://assets/graphics/map/advert-lolipop_1.png" id="2_7v0sw"]
[ext_resource type="Shader" path="res://resources/small-advert.gdshader" id="3_sms3w"]
[ext_resource type="Texture2D" uid="uid://dv8uocv86wk1i" path="res://assets/graphics/adverts/Cellophane.png" id="3_ygq4e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6i7gx"]
shader = ExtResource("3_sms3w")
shader_parameter/pixel_size = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hcrf"]
size = Vector2(66, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ifrs"]
size = Vector2(96, 46)

[node name="Advert" type="Node2D"]
script = ExtResource("1_0vhs6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -68)
scale = Vector2(3, 3)
texture = ExtResource("2_7v0sw")

[node name="Advert" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_6i7gx")
offset_left = -24.0
offset_top = -101.0
offset_right = 24.0
offset_bottom = -29.0
texture = ExtResource("3_ygq4e")
expand_mode = 5
stretch_mode = 6

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_3hcrf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_7ifrs")
debug_color = Color(0.682353, 0.454902, 0.584314, 0.419608)

[node name="PromptTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_player_enter_area"]
[connection signal="body_exited" from="Area2D" to="." method="_player_exit_area"]
[connection signal="timeout" from="PromptTimer" to="." method="_show_player_input_prompt"]
